--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,10 @@ ul {
   max-width: 1024px;
   margin: 0 auto; }
 
-.vtable {
-  display: table;
-  table-layout: fixed;
+.vflex {
+  display: flex;
+  align-items: center;
   height: 100%; }
-
-.vtable-content {
-  display: table-cell;
-  vertical-align: middle; }
 
 /*Header styles*/
 header {
@@ -77,39 +73,45 @@ main {
   border: 1px solid #EBEBEB; }
 
 .project {
-  padding: 20px 0; }
-
-.project-content {
-  position: relative; }
+  padding: 20px 0;
+  display: flex; }
 
 .project-main {
-  float: left;
-  width: calc(100% - 200px); }
+  display: flex;
+  width: 100%; }
 
 .project-source {
-  position: absolute;
-  top: 0;
-  right: 0;
   width: 200px;
-  height: 100%;
   padding-left: 20px;
+  margin-left: 10px;
   border-left: 1px solid #ABABAB; }
   .project-source p {
     margin-top: 10px; }
   .project-source i {
     margin-right: 8px; }
 
+.project-icon-column {
+  width: 64px; }
+
 .project-icon {
-  float: left;
+  display: block;
   width: 64px;
   height: 64px;
   background-repeat: no-repeat;
   background-size: contain; }
 
+.project-source-mobile {
+  display: none; }
+
 .project-text {
-  float: left;
-  width: calc(100% - 64px);
   padding-left: 25px; }
+  .project-text h3 {
+    display: inline-block; }
+
+.project-responsive {
+  font-size: 25px;
+  color: #bbb;
+  margin-left: 10px; }
 
 /*Footer styles*/
 footer {
@@ -120,5 +122,28 @@ footer {
 .social-image {
   width: 48px;
   height: 48px; }
+
+/*iPad*/
+@media screen and (max-width: 767px) {
+  #content {
+    padding: 20px; }
+
+  .project-source {
+    width: 65px;
+    padding-left: 15px; }
+    .project-source i {
+      margin-right: 0; }
+
+  .project-source-label {
+    display: none; } }
+@media screen and (max-width: 450px) {
+  .project-source {
+    display: none; }
+
+  .project-source-mobile {
+    display: block;
+    margin-top: 10px; }
+    .project-source-mobile .btn {
+      width: 100%; } }
 
 /*# sourceMappingURL=style.css.map */
