--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,14 +28,10 @@ ul {
     max-width: 1024px;
     margin: 0 auto;
 }
-.vtable {
-    display: table;
-    table-layout: fixed;
+.vflex {
+    display: flex;
+    align-items: center;
     height: 100%;
-}
-.vtable-content {
-    display: table-cell;
-    vertical-align: middle;
 }
 /*Header styles*/
 header {
@@ -64,28 +60,28 @@ header {
     border-top-width: 1px;
     border-bottom-width: 1px;
     text-align: center;
-    
+
     ul {
         padding: 0;
         margin: 0;
     }
-    
+
     li, li.active {
         display: inline-block;
         transition: $transition_fast;
-        
+
         a {
             display: block;
             color: $title_color;
             padding: 20px 14px;
         }
-        
+
         &:hover {
             background-color: $primary_color;
             color: white;
         }
     }
-    
+
     li.active {
         background-color: $border_color;
     }
@@ -101,23 +97,18 @@ main {
 }
 .project {
     padding: 20px 0;
-}
-.project-content {
-    position: relative;
+    display: flex;
 }
 .project-main {
-    float: left;
-    width: calc(100% - 200px);
+    display: flex;
+    width: 100%;
 }
 .project-source {
-    position: absolute;
-    top: 0;
-    right: 0;
     width: 200px;
-    height: 100%;
     padding-left: 20px;
+    margin-left: 10px;
     border-left: 1px solid $border_dark_color;
-    
+
     p {
         margin-top: 10px;
     }
@@ -125,17 +116,30 @@ main {
         margin-right: 8px;
     }
 }
+.project-icon-column {
+    width: 64px;
+}
 .project-icon {
-    float: left;
+    display: block;
     width: 64px;
     height: 64px;
     background-repeat: no-repeat;
     background-size: contain;
 }
+.project-source-mobile {
+    display: none;
+}
 .project-text {
-    float: left;
-    width: calc(100% - 64px);
     padding-left: 25px;
+
+    h3 {
+        display: inline-block;
+    }
+}
+.project-responsive {
+    font-size: 25px;
+    color: #bbb;
+    margin-left: 10px;
 }
 /*Footer styles*/
 footer {
@@ -146,4 +150,34 @@ footer {
 .social-image {
     width: 48px;
     height: 48px;
+}
+/*iPad*/
+@media screen and (max-width: 767px) {
+    #content {
+        padding: 20px;
+    }
+    .project-source {
+        width: 65px;
+        padding-left: 15px;
+        i {
+            margin-right: 0;
+        }
+    }
+
+    .project-source-label {
+        display: none;
+    }
+}
+@media screen and (max-width: 450px) {
+    .project-source {
+        display: none;
+    }
+    .project-source-mobile {
+        display: block;
+        margin-top: 10px;
+
+        .btn {
+            width: 100%;
+        }
+    }
 }
