--- a/src/scss/_page-home.scss
+++ b/src/scss/_page-home.scss
@@ -10,7 +10,7 @@
     flex-shrink: 0;
     padding-left: 20px;
     margin-left: 10px;
-    border-left: 1px solid $border-dark_color;
+    border-left: 1px solid $border-secondary;
 
     p {
         margin-top: 10px;
