--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,18 +1,24 @@
 /*Header styles*/
 header {
-    background-color: white;
-
-
+    .theme-switch {
+        position: absolute;
+        top: 8px;
+        right: 8px;
+        font-size: 20px;
+    }
     .header-title {
         text-align: center;
         padding: 60px 0 20px 0;
-        background-color: white;
+
+        @include media($phone-port) {
+            padding-top: 20px;
+        }
     }
     #title {
+        @extend %title-text;
         font-size: 3em;
         font-weight: normal;
         margin-bottom: 25px;
-        color: $title-color;
     }
     #subtitle {
         font-size: 1.5em;
@@ -21,7 +27,7 @@ header {
 
     /*Navigation styles*/
     #header_nav {
-        border: 1px solid $border-color;
+        border: 1px solid $border-primary;
         border-right-width: 0;
         border-left-width: 0;
 
@@ -36,21 +42,21 @@ header {
             display: inline-block;
 
             a {
+                @extend %title-text;
                 display: block;
-                color: $title-color;
                 padding: 20px 14px;
                 transition: $transition-fast;
                 text-decoration: none;
 
                 &:hover {
-                    background-color: $primary-color;
+                    @include property-dark("background-color", $highlight-primary, $highlight-primary-dark);
                     color: white;
                 }
             }
         }
 
         li.active {
-            background-color: $border-color;
+            background-color: $border-primary;
         }
     }
 }
