--- a/src/scss/_page-home.scss
+++ b/src/scss/_page-home.scss
@@ -29,18 +29,18 @@
         border-radius: 8px;
     }
     .project-libraries {
-        $color: #ccc;
         display: flex;
         justify-content: center;
         align-items: center;
         //margin-left: 4px;
         margin-top: 4px;
         padding-top: 4px;
-        border-top: 1px solid $color;
+        border-top: 1px solid;
+        @include property-dark("border-color", $copy-light, $copy-light-dark);
 
         * {
             cursor: help;
-            color: $color;
+            @extend %copy-light;
 
             &:not(:last-child) {
                 margin-right: 4px;
@@ -58,13 +58,14 @@
 
     .project-responsive {
         font-size: 25px;
-        color: #bbb;
         margin-left: 10px;
+        @extend %copy-light;
     }
     .project-badge {
         font-size: 14px;
         border-radius: 4px;
         margin-left: 8px;
+        text-transform: uppercase;
 
         &.project-badge-alpha {
             @include badge-variant($danger);
