--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -67,3 +67,12 @@ ul {
         @include button-outline-variant($highlight-primary-dark, white);
     }
 }
+
+//External components
+.slick-arrow {
+    @include theme-light {
+        &:before {
+            color: black;
+        }
+    }
+}
